--- a/index.html
+++ b/index.html
@@ -526,8 +526,8 @@
             </div>
             <div class="md:w-3/4 w-full pt-5 md:pt-0 md:pl-5 text-center md:text-left  ">
                 <p class="md:text-3xl text-xl font-bold text-[#8F00FF] "> CGEC DOUBTHUB </p>
-                <p class="md:text-2xl text-lg font-semibold pt-2"> Founder</p>
-                <p class="md:text-2xl text-lg font-semibold pt-2">I've worked with our college students on Data Analysis with the industry standard data and 95% students has out-performed with high accuracy in their first attempt in every data analysis project  under my guidance also i'm empowering tech Community in our college responsively.</p>
+                <p class="md:text-2xl text-lg font-semibold pt-2">Co-Founder</p>
+                <p class="md:text-2xl text-lg font-semibold pt-2">Empowering Tech Community</p>
                 <p class="md:text-xl text-base font-semibold pt-2">Dec,2023 - Present</p>
             </div>
         </div>
