--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     
 
                     
-                    <a href="https://drive.google.com/file/d/1jb4Z_HZdWr2xWX1agqFK8jSvY-n_gXmO/view?usp=sharing" target="_blank"
+                    <a href="https://drive.google.com/file/d/1w6bXFHP4OM3Pr26vM09i9ZdgfYXKrSAv/view?usp=sharing"
                         class="text-base font-semibold text-white bg-[#8F00FF] p-4 rounded-sm hover:shadow-lg hover:opacity-90 transition duration-300 ease-in-out font-mono">
                         Download Resume
                     </a>
@@ -577,7 +577,7 @@
             class="md:flex md:w-4/5 w-[95%] mx-auto h-auto md:h-200 p-5 md:p-10 shadow-[rgba(0,_0,_0,_0.24)_0px_3px_8px] rounded-lg bg-white  cursor-pointer">
 
             <div class="md:w-1/4 w-full">
-                <img src="./dist/img/1703874761276.jpg"
+                <img src="./dist/img/1701090069971.jfif"
                     class="w-[60%] h-auto md:h-36 md:w-36 mx-auto transform hover:scale-105 duration-300 ease-in-out hover:shadow-[0_20px_50px_rgba(159,_70,_227,_0.7)]  rounded-lg p-2 shadow-[0px_4px_16px_rgba(17,17,26,0.1),_0px_8px_24px_rgba(17,17,26,0.1),_0px_16px_56px_rgba(17,17,26,0.1)]"
                     alt="COOCH BEHAR GOVERNMENT ENGINEERING COLLEGE Logo">
             </div>
