--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                 
                 <div class="max-w-sm rounded overflow-hidden shadow-lg rounded-lg">
                     <a href="https://www.linkedin.com/posts/padmanava-das-9a68b2257_dataanalytics-powerbi-sql-activity-7199489226944516096-qr65?utm_source=share&utm_medium=member_desktop" target="_blank"> <img class="w-full"
-                            src="./dist/img/1716491991058.jpg" alt="Mountain"></a>
+                            src="./dist/img/Hr_Analytics.png" alt="Mountain"></a>
                     <div class="px-6 py-4">
                         <div class="font-bold text-xl mb-2 font-mono text-secondary">HR Pulse: Workforce Analytics Dashboard 
                             
@@ -577,7 +577,7 @@
             class="md:flex md:w-4/5 w-[95%] mx-auto h-auto md:h-200 p-5 md:p-10 shadow-[rgba(0,_0,_0,_0.24)_0px_3px_8px] rounded-lg bg-white  cursor-pointer">
 
             <div class="md:w-1/4 w-full">
-                <img src="./dist/img/1701090069971.jfif"
+                <img src="./dist/img/download.jfif"
                     class="w-[60%] h-auto md:h-36 md:w-36 mx-auto transform hover:scale-105 duration-300 ease-in-out hover:shadow-[0_20px_50px_rgba(159,_70,_227,_0.7)]  rounded-lg p-2 shadow-[0px_4px_16px_rgba(17,17,26,0.1),_0px_8px_24px_rgba(17,17,26,0.1),_0px_16px_56px_rgba(17,17,26,0.1)]"
                     alt="COOCH BEHAR GOVERNMENT ENGINEERING COLLEGE Logo">
             </div>
