--- a/index.html
+++ b/index.html
@@ -261,12 +261,12 @@
                             <iconify-icon icon="simple-icons:codeforces"></iconify-icon>
                         </a> -->
 
-                        <!-- hakerrank  Profile-->
+<!--                          hakerrank  Profile -->
 
-                        <!-- <a href="https://www.hackerrank.com/profile/goraisusanta2018" target="_blank"
+                        <a href="https://www.hackerrank.com/profile/padmanavadas026" target="_blank"
                             class="w-10 h-10 mr-2 rounded-lg  flex justify-center items-center text-slate-500 shadow-[-10px_-10px_30px_4px_rgba(0,0,0,0.1),_10px_10px_30px_4px_rgba(45,78,255,0.15)] hover:border-primary hover:bg-[#8F00FF] hover:text-white duration-300 ease-in-out">
                             <iconify-icon icon="la:hackerrank"></iconify-icon>
-                        </a> -->
+                        </a>
 
                         <!-- HackerEarth   Profile-->
 
