--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
                    
                 <div class="max-w-sm rounded overflow-hidden shadow-lg rounded-lg">
                     <a href="https://www.linkedin.com/posts/padmanavadas_forage-certificate-activity-7306206167783878657-o1MY?utm_source=share&utm_medium=member_desktop&rcm=ACoAAD9Qng4BEtQ_T9JseOsKObG_6NSrLpBHdJM"> <img class="w-full"
-                            src="./dist/img/Hr_Analytics.png" alt="Mountain"></a>
+                            src="./dist/img/Screenshot 2025-03-29 081607.png" alt="Mountain"></a>
                     <div class="px-6 py-4">
                         <div class="font-bold text-xl mb-2 font-mono text-secondary">Deloitte Australia Data Analytics Job Simulation 
                             
