--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
                     Regularly posted updates and information regarding APOGEE on the Different page, which kept the fest in
                     the eye of the public and improved its popularity.
 </p>
-                <p class="md:text-xl text-base font-semibold pt-2">Dec,2023 - Present</p>
+                <p class="md:text-xl text-base font-semibold pt-2">Jan 2025 - Present</p>
             </div>
         </div>
 
