--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
             class="md:flex md:w-4/5 w-[95%] mx-auto h-auto md:h-200 p-5 md:p-10 shadow-[rgba(0,_0,_0,_0.24)_0px_3px_8px] rounded-lg bg-white  cursor-pointer">
 
             <div class="md:w-1/4 w-full">
-                <img src="./dist/img/wxt.png"
+                <img src="./dist/img/wxt1.png"
                     class="w-[60%] h-auto md:h-36 md:w-36 mx-auto transform hover:scale-105 duration-300 ease-in-out hover:shadow-[0_20px_50px_rgba(159,_70,_227,_0.7)]  rounded-lg p-2 shadow-[0px_4px_16px_rgba(17,17,26,0.1),_0px_8px_24px_rgba(17,17,26,0.1),_0px_16px_56px_rgba(17,17,26,0.1)]"
                     alt="COOCH BEHAR GOVERNMENT ENGINEERING COLLEGE Logo">
             </div>
@@ -665,7 +665,7 @@
             class="md:flex md:w-4/5 w-[95%] mx-auto h-auto md:h-200 p-5 md:p-10 shadow-[rgba(0,_0,_0,_0.24)_0px_3px_8px] rounded-lg bg-white  cursor-pointer">
 
             <div class="md:w-1/4 w-full">
-                <img src="./dist/img/celebal.png"
+                <img src="./dist/img/celebal1.png"
                     class="w-[60%] h-auto md:h-36 md:w-36 mx-auto transform hover:scale-105 duration-300 ease-in-out hover:shadow-[0_20px_50px_rgba(159,_70,_227,_0.7)]  rounded-lg p-2 shadow-[0px_4px_16px_rgba(17,17,26,0.1),_0px_8px_24px_rgba(17,17,26,0.1),_0px_16px_56px_rgba(17,17,26,0.1)]"
                     alt="COOCH BEHAR GOVERNMENT ENGINEERING COLLEGE Logo">
             </div>
