--- a/index.html
+++ b/index.html
@@ -756,8 +756,11 @@
             <div class="md:w-3/4 w-full pt-5 md:pt-0 md:pl-5 text-center md:text-left  ">
                 <p class="md:text-3xl text-xl font-bold text-[#8F00FF] "> CGEC DOUBTHUB </p>
                 <p class="md:text-2xl text-lg font-semibold pt-2">Co-Founder</p>
-                <p class="md:text-2xl text-lg font-semibold pt-2"> Contributed to the establishment and growth of CGEC DoubtHub, a peer-learning initiative within the
-                college</p>
+                <p class="md:text-2xl text-lg font-semibold pt-2"> Co-founded a peer-learning community of 400+ students at CGEC
+
+                    Conducted mock interviews, resume reviews, and doubt-clearing sessions
+
+                 Leading overall strategy, operations, and engagement activities</p>
                 <p class="md:text-xl text-base font-semibold pt-2">Dec,2023 - Present</p>
             </div>
         </div>
@@ -780,7 +783,13 @@
             <div class="md:w-3/4 w-full pt-5 md:pt-0 md:pl-5 text-center md:text-left  ">
                 <p class="md:text-3xl text-xl font-bold text-[#8F00FF] ">GDSC CGEC  </p>
                 <p class="md:text-2xl text-lg font-semibold pt-2">Core Team Member</p>
-                <p class="md:text-2xl text-lg font-semibold pt-2">Guiding GDSC CGEC in the right Direction in our college.</p>
+                <p class="md:text-2xl text-lg font-semibold pt-2">Organized hands-on workshops, hackathons, and speaker sessions
+
+                                            Mentored juniors in web development and project-building
+
+                                            Played a key role in shaping the tech culture for a 700+ student developer community
+                                        Organized hands-on workshops, hackathons, and speaker sessions Mentored juniors in web development and project-building Played a key role in shaping the tech culture for a 700+ student developer community
+                </p>
                 <p class="md:text-xl text-base font-semibold pt-2">Aug,2023 - Present</p>
             </div>
         </div>
