--- a/index.html
+++ b/index.html
@@ -643,9 +643,13 @@
             <div class="md:w-3/4 w-full pt-5 md:pt-0 md:pl-5 text-center md:text-left  ">
                 <p class="md:text-3xl text-xl font-bold text-[#8F00FF] "> Extern  </p>
                 <p class="md:text-2xl text-lg font-semibold pt-2"> Amazon – Operational Strategy & People Analytics Extern </p>
-                <p class="md:text-2xl text-lg font-semibold pt-2"> Participating in a real-world externship focused on operational strategy and people analytics at Amazon.
-                    Actively engaging in onboarding, group sessions, and learning activities related to business operations, workforce analysis, and stakeholder reporting.
-                   Using Python for data analysis to prepare for sentiment analysis and root cause exploration.
+                <p class="md:text-2xl text-lg font-semibold pt-2"> Achieved Top Performer status, an honor awarded to the top 10% of participants for exceptional analytical work, initiative, and presentation quality.
+
+Analyzed 100+ unstructured employee reviews to identify workforce attrition risks, productivity blockers, and key operational pain points within Amazon Fulfillment Centers.
+
+Created segmented cohort profiles using qualitative data analysis and thematic coding to surface role-specific challenges and recommend targeted interventions.
+
+Developed business-ready briefing notes and strategy decks synthesizing frontline insights into actionable operational recommendations.
                 </p>
                 <p class="md:text-xl text-base font-semibold pt-2">Jul 2025 - Present</p>
             </div>
